name:                asunr
version:             0.1.0.0
synopsis:            A Simple Untrusted Code Runner
description:         Please see README.md
homepage:            https://github.com/dramforever/asunr#readme
license:             BSD3
license-file:        LICENSE
author:              dramforever
maintainer:          dramforever@live.com
copyright:           (C) Wang Ruikang <dramforever@live.com>
category:            Web
build-type:          Simple
extra-source-files:  cbits/cbits.c
cabal-version:       >=1.10

library
  c-sources:           cbits/cbits.c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O -Wall
  hs-source-dirs:      src
  exposed-modules:     Asunr.Runner
  build-depends:       base >= 4.7 && < 5
                     , unix >= 2.7.1.0 && < 3
                     , bytestring >= 0.10.6.0 && < 1
  default-language:    Haskell2010
  extra-libraries:     seccomp

executable asunr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O -Wall
  build-depends:       base >= 4.7 && < 5
                     , asunr
                     , unix >= 2.7.1.0 && < 3
                     , bytestring >= 0.10.6.0 && < 1
  default-language:    Haskell2010

test-suite asunr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , asunr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dramforever/asunr
